--- a/BooksApp/app/src/main/AndroidManifest.xml
+++ b/BooksApp/app/src/main/AndroidManifest.xml
@@ -23,7 +23,16 @@
                 android:value="" />
         </activity>
         <activity
+            android:label="SignUp"
             android:name=".SignUpActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:label="Donate"
+            android:name=".DonorActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
