Added landing page

--- a/BooksApp/app/src/main/AndroidManifest.xml
+++ b/BooksApp/app/src/main/AndroidManifest.xml
@@ -87,7 +87,28 @@
                 android:value="" />
         </activity>
         <activity
+            android:label="Math"
             android:name=".MainActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <!--<activity
+            android:name=".MainActivity1"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>!-->
+        <activity
+            android:name=".LandingActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
